fixing flex .row to wrap

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -40,8 +40,10 @@ template {
 
 .row {
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 a {
